Setup scripted tests
Scripted tests allow to emulate a build scenario. They can interpret all
the commands that are accepted in an sbt shell, and support some file
manipulation commands.

Documentation can be found here: http://eed3si9n.com/testing-sbt-plugins